--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,17 +1,34 @@
 footer{
     border-top: 1px solid #d6d6d6;
     padding: 1rem;
+    @include medium{
+        padding: 0
+    }
 
     .footer-title{
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
 
+        @include medium{
+            background-color: var(--light-blue);
+            border-radius: 15px;
+            align-items: center;
+            padding: 2rem;
+            margin: 2rem 5rem;
+        }
+
         .footer-headline{
             display: flex;
             align-items: center;
+            margin-bottom: 1rem;
+
+            @include medium{
+                margin: 0;
+            }
 
             .logo{
+                background-color: white;
                 border: 1px solid #d6d6d6;
                 border-radius: 15px;
                 display: flex;
@@ -24,11 +41,12 @@ footer{
                 margin-left: 1rem;
                 font-size: 1.3rem;
                 font-weight: 600;
+                @include medium{
+                    color: var(--text-light-color);
+                }
             }
         }
         .call-to-action{
-            width: 100%;
-            margin-top: 2rem;
     
             button{
                 border: none;
@@ -40,6 +58,10 @@ footer{
                 border-radius: 10px;
                 display: flex;
                 align-items: center;
+
+                @include medium{
+                    background-color: #ADC9FF;
+                }
     
                 img{
                     margin-left: 0.5rem;
@@ -51,6 +73,11 @@ footer{
     .footer-content{
         display: flex;
         flex-wrap: wrap;
+
+        @include medium{
+            margin: 1rem 5rem;
+            justify-content: space-around;
+        }
 
         .infos{
             margin: 1.5rem 1rem;
@@ -77,6 +104,7 @@ footer{
 
         .footer-contact{
             line-height: 2rem;
+            padding: 1.5rem 1rem;
 
             h4{
                 font-size: 1.2rem;
