--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -4,6 +4,9 @@ header{
     padding: 0 1rem;
     border-bottom: 1px solid #d6d6d6;
     height: 5rem;
+    @include large{
+      padding: 0 5rem;
+    }
 
     a{
       display: flex;
@@ -49,19 +52,30 @@ header{
       li{
         a{
           color: var(--text-light-color);
-          font-size: 2rem;
+          font-size: 1.5rem;
           font-weight: 600;
 
           @include medium{
             display: inline-block;
             font-weight: 500;
-            padding: 15px;
+            padding: 0.5rem 1rem;
             text-decoration: none;
             font-size: 1.5rem;
             color: black;
           }
         }
       }
+
+      .active{
+        background-color: var(--light-blue);
+        border-radius: 15px;
+
+        a{
+          color: var(--text-light-color);
+        }
+      }
+
+
 
       .closeMenu {
         display: block;
